--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,7 +21,7 @@
             android:icon="@drawable/ic_baseline_contacts_24"
             android:title="@string/menu_contact_info" />
         <item
-            android:id="@+id/company_info"
+            android:id="@+id/nav_company_info"
             android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/menu_company_info" />
 
