--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -2,4 +2,31 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation" />
+    android:id="@+id/mobile_navigation"
+    app:startDestination="@id/nav_home">
+    <fragment
+        android:id="@+id/nav_home"
+        android:name="com.example.friedicecream.HomeFragment"
+        android:label="@string/menu_home"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/nav_flavours"
+        android:name="com.example.friedicecream.FlavoursFragment"
+        android:label="@string/menu_flavours"
+        tools:layout="@layout/fragment_flavours" />
+    <fragment
+        android:id="@+id/nav_order"
+        android:name="com.example.friedicecream.OrderFragment"
+        android:label="@string/menu_order"
+        tools:layout="@layout/fragment_order" />
+    <fragment
+        android:id="@+id/nav_contact_info"
+        android:name="com.example.friedicecream.ContactFragment"
+        android:label="@string/menu_contact_info"
+        tools:layout="@layout/fragment_contact" />
+    <fragment
+        android:id="@+id/nav_company_info"
+        android:name="com.example.friedicecream.CompanyInfoFragment"
+        android:label="@string/menu_company_info"
+        tools:layout="@layout/fragment_company_info" />
+</navigation>
