--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,4 +29,9 @@
         android:name="com.example.friedicecream.CompanyInfoFragment"
         android:label="@string/menu_company_info"
         tools:layout="@layout/fragment_company_info" />
+    <fragment
+        android:id="@+id/nav_f_a_q"
+        android:name="com.example.friedicecream.FAQsFragment"
+        android:label="@string/menu_f_a_q"
+        tools:layout="@layout/fragment_f_a_qs" />
 </navigation>
