--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/nav_home">
+    app:startDestination="@id/nav_ice_cream">
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.friedicecream.HomeFragment"
@@ -34,4 +34,9 @@
         android:name="com.example.friedicecream.FAQsFragment"
         android:label="@string/menu_f_a_q"
         tools:layout="@layout/fragment_f_a_qs" />
+    <fragment
+        android:id="@+id/nav_ice_cream"
+        android:name="com.example.friedicecream.FlavourFragment"
+        android:label="fragment_flavour"
+        tools:layout="@layout/fragment_flavour" />
 </navigation>
