--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,12 +31,12 @@
         tools:layout="@layout/fragment_company_info" />
     <fragment
         android:id="@+id/nav_f_a_q"
-        android:name="com.example.friedicecream.FAQsFragment"
+        android:name="com.example.friedicecream.ListView.FAQsFragment"
         android:label="@string/menu_f_a_q"
         tools:layout="@layout/fragment_f_a_qs" />
     <fragment
         android:id="@+id/nav_ice_cream"
-        android:name="com.example.friedicecream.FlavourFragment"
-        android:label="fragment_flavour"
-        tools:layout="@layout/fragment_flavour" />
+        android:name="com.example.friedicecream.RecyclerView.IceCreamFragment"
+        android:label="ice Cream"
+        tools:layout="@layout/fragment_ice_cream" />
 </navigation>
