--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -38,10 +38,19 @@
         android:id="@+id/nav_ice_cream"
         android:name="com.example.friedicecream.RecyclerView.IceCreamFragment"
         android:label="ice Cream"
-        tools:layout="@layout/fragment_ice_cream" />
+        tools:layout="@layout/fragment_ice_cream" >
+        <action
+            android:id="@+id/action_nav_ice_cream_to_iceCreamDetailed"
+            app:destination="@id/iceCreamDetailed" />
+    </fragment>
     <fragment
         android:id="@+id/nav_info_icecream"
         android:name="com.example.friedicecream.ViewPager.InfoFragment"
         android:label="fragment_nav_info_icecream"
         tools:layout="@layout/fragment_info_icecream" />
+    <fragment
+        android:id="@+id/iceCreamDetailed"
+        android:name="com.example.friedicecream.iceCreamDetailed"
+        android:label="fragment_ice_cream_detailed"
+        tools:layout="@layout/fragment_ice_cream_detailed" />
 </navigation>
