Addpreferences to hold value and keys for settings add Settings fragment it extends PreferenceFragmentCompat

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -48,4 +48,9 @@
         android:name="com.example.friedicecream.iceCreamDetailed"
         android:label="fragment_ice_cream_detailed"
         tools:layout="@layout/fragment_ice_cream_detailed" />
+    <fragment
+        android:id="@+id/nav_settings"
+        android:name="com.example.friedicecream.SeetingsFragment"
+        android:label="fragment_seetings"
+        tools:layout="@layout/fragment_seetings" />
 </navigation>
