--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
         android:text="@string/shop_name"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/purple_500"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
