add intents in contact buttons

--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -26,7 +26,7 @@
         android:textColor="#000000"
         tools:ignore="TextContrastCheck" />
     <Button
-        android:id="@+id/address"
+        android:id="@+id/addressButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -40,6 +40,16 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/facebook"
+        android:textColor="#000000"
+        tools:ignore="TextContrastCheck,TextContrastCheck" />
+
+
+    <Button
+        android:id="@+id/searchButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/search"
         android:textColor="#000000"
         tools:ignore="TextContrastCheck,TextContrastCheck" />
 
