--- a/app/src/main/res/layout/fragment_fact.xml
+++ b/app/src/main/res/layout/fragment_fact.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/titleFact"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/hello_blank_fragment" />
 
     <ImageView
