--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,6 +24,9 @@
             android:id="@+id/nav_company_info"
             android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/menu_company_info" />
+
+
+
         <item
             android:id="@+id/nav_f_a_q"
             android:icon="@drawable/ic_baseline_question_answer_24"
@@ -32,7 +35,7 @@
         <item
             android:id="@+id/nav_ice_cream"
             android:icon="@drawable/ic_baseline_icecream_24"
-            android:title="@string/menu_ice_cream" />
+            android:title="@string/label_fragment_flavours" />
 
 
 
