--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/nav_info_icecream"
             android:icon="@drawable/ic_baseline_icecream_24"
-            android:title="@string/menu_flavours" />
+            android:title="view pager" />
         <item
             android:id="@+id/nav_order"
             android:icon="@drawable/ic_baseline_storefront_24"
