--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,17 +2,17 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="message">
-    <EditTextPreference
-        app:key="signature"
-        app:title="Hello"
-        app:useSimpleSummaryProvider="true" />
+    <SwitchPreferenceCompat
+        app:key="sync"
+        app:title="Tablet View Style"/>
+
+
+
     <ListPreference
-        android:defaultValue="2.99"
-        android:entries="@array/currency_menu"
-        android:entryValues="@array/currency_value"
-        android:key="Currency"
-        android:summary="Please select the currency"
-        android:title="Currency Option" />
-    </PreferenceCategory>
+        android:defaultValue="#00000"
+        android:entries="@array/color_menu"
+        android:entryValues="@array/color_menu"
+        android:key="Color"
+        android:summary="Please choose the color"
+        android:title="Color" />
 </PreferenceScreen>
