--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
-        android:text="@string/shop_name"
+        android:text="@string/cherry_desc"
         android:textColor="@color/purple_500"
         android:textSize="35sp"
         android:textStyle="bold"
