--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,11 +20,6 @@
         android:label="@string/menu_contact_info"
         tools:layout="@layout/fragment_contact" />
     <fragment
-        android:id="@+id/nav_company_info"
-        android:name="com.example.friedicecream.CompanyInfoFragment"
-        android:label="@string/menu_company_info"
-        tools:layout="@layout/fragment_company_info" />
-    <fragment
         android:id="@+id/nav_f_a_q"
         android:name="com.example.friedicecream.ListView.FAQsFragment"
         android:label="@string/menu_f_a_q"
@@ -37,31 +32,14 @@
         <action
             android:id="@+id/action_nav_ice_cream_to_nav_cart"
             app:destination="@id/nav_cart" />
-        <action
-            android:id="@+id/action_nav_ice_cream_to_iceCreamDetailed"
-            app:destination="@id/iceCreamDetailed" />
-        <action
-            android:id="@+id/action_nav_ice_cream_to_iceCreamDetailed2"
-            app:destination="@id/iceCreamDetailed" />
-        <action
-            android:id="@+id/action_nav_ice_cream_to_iceCreamDetailed3"
-            app:destination="@id/iceCreamDetailed" />
     </fragment>
     <fragment
         android:id="@+id/nav_info_icecream"
         android:name="com.example.friedicecream.ViewPager.InfoFragment"
-        android:label="fragment_nav_info_icecream"
-        tools:layout="@layout/fragment_info_icecream" />
-    <fragment
-        android:id="@+id/iceCreamDetailed"
-        android:name="com.example.friedicecream.iceCreamDetailed"
-        android:label="fragment_ice_cream_detailed"
-        tools:layout="@layout/fragment_ice_cream_detailed"
-        app:enterAnim="@anim/anim_in"
-        app:exitAnim="@anim/anim_out"
-        app:popEnterAnim="@anim/anim_back_in"
-        app:popExitAnim="@anim/anim_back_out"/>
-        />
+        android:label="Ice Cream Flavours"
+        tools:layout="@layout/fragment_info_icecream" /><![CDATA[
+    />
+    ]]>
     <fragment
         android:id="@+id/nav_settings"
         android:name="com.example.friedicecream.SettingsFragment"
