--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="font_question">18sp</dimen>
     <dimen name="font_answer">14sp</dimen>
+    <dimen name="desc_size">20sp</dimen>
+    <dimen name="title_size">30sp</dimen>
 </resources>
