--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -30,6 +30,12 @@
             android:icon="@drawable/ic_baseline_icecream_24"
             android:title="@string/label_fragment_flavours" />
 
+        <item
+            android:id="@+id/nav_credit"
+            android:icon="@drawable/ic_baseline_icecream_24"
+            android:title="@string/label_fragment_credit" />
+
+
 
 
     </group>
