--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -49,4 +49,9 @@
         android:name="com.example.friedicecream.CartListView.CartFragment"
         android:label="fragment_nav_cart"
         tools:layout="@layout/fragment_nav_cart" />
+    <fragment
+        android:id="@+id/nav_credit"
+        android:name="com.example.friedicecream.nav_credit"
+        android:label="Credit"
+        tools:layout="@layout/fragment_nav_credit" />
 </navigation>
