--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,8 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/font_settings"
+        android:id="@+id/cart"
+        android:orderInCategory="1"
+        android:icon="@drawable/ic_baseline_shopping_cart_24"
+        android:title="Cart"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_settings"
         android:orderInCategory="100"
+        android:icon="@drawable/ic_baseline_settings_24"
         android:title="Settings"
-        app:showAsAction="never" />
+
+        app:showAsAction="ifRoom" />
 </menu>
