--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>    <string-array name="color_menu">
+<resources>    <string-array name="currency_menu">
 
-        <item>Green</item>
-        <item>Blue</item>
+        <item>us</item>
+        <item>can</item>
+    </string-array>
+
+    <string-array name="currency_value">
+
+        <item>us</item>
+        <item>can</item>
     </string-array>
 
 </resources>
