--- a/app/src/main/res/layout/fragment_nav_credit.xml
+++ b/app/src/main/res/layout/fragment_nav_credit.xml
@@ -6,6 +6,7 @@
     android:layout_margin="10dp"
     android:orientation="vertical"
     android:padding="5dp"
+    android:background="@color/purple_100"
     tools:context=".nav_credit">
 
 
@@ -21,7 +22,7 @@
 
     <TextView
         android:id="@+id/authorName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="@string/author_name"
@@ -29,21 +30,38 @@
         android:textSize="25sp" />
 
     <TextView
-        android:id="@+id/thanks"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:text="@string/special_thanks"
         android:textAlignment="center"
-        android:text="@string/thanks"
         android:textSize="30sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/thanksame"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="@string/thanks_name"
+        android:textAlignment="center"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/thanks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="@string/thanks"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/soecial_thanks_name"
         android:textAlignment="center"
         android:textSize="25sp" />
 
