--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,7 +7,6 @@
         app:title="Tablet View Style"/>
 
 
-
     <ListPreference
         android:defaultValue="us"
         android:entries="@array/currency_menu"
@@ -15,4 +14,13 @@
         android:key="currency"
         android:summary="Please choose the currency"
         android:title="Currency" />
+
+    <EditTextPreference
+        android:defaultValue="sett"
+        android:key="name"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="Edit text preference" />
+
+
 </PreferenceScreen>
