--- a/app/src/main/res/anim/anim_back_out.xml
+++ b/app/src/main/res/anim/anim_back_out.xml
@@ -2,7 +2,7 @@
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="@android:integer/config_shortAnimTime"
     android:fromXDelta="0"
-    android:toXDelta="100">
+    android:toXDelta="100%">
 
 
 </translate>
