--- a/app/src/main/res/layout/fragment_nav_credit.xml
+++ b/app/src/main/res/layout/fragment_nav_credit.xml
@@ -30,20 +30,21 @@
         android:textSize="25sp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/specialThanks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="@string/special_thanks"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/thanksame"
+        android:id="@+id/specialThanksName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="@string/thanks_name"
+        android:text="@string/special_thanks_name"
         android:textAlignment="center"
         android:textSize="25sp" />
 
@@ -58,10 +59,11 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/thanksName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/soecial_thanks_name"
+        android:padding="10dp"
+        android:text="@string/thanks_name"
         android:textAlignment="center"
         android:textSize="25sp" />
 
