--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,12 +28,8 @@
         <item
             android:id="@+id/nav_ice_cream"
             android:icon="@drawable/ic_baseline_icecream_24"
-            android:title="@string/label_fragment_flavours" />
+            android:title="@string/menu_order" />
 
-        <item
-            android:id="@+id/nav_credit"
-            android:icon="@drawable/ic_baseline_icecream_24"
-            android:title="@string/label_fragment_credit" />
 
 
 
