--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -14,6 +14,11 @@
         android:orderInCategory="100"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="Settings"
-
+         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/credits"
+        android:orderInCategory="12"
+        android:title="Credits"
         app:showAsAction="ifRoom" />
+
 </menu>
