--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,9 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="font_question">22sp</dimen>
-    <dimen name="font_answer">18sp</dimen>
-    <dimen name="desc_size">20sp</dimen>
-    <dimen name="title_size">30sp</dimen>
+    <dimen name="font_question">35sp</dimen>
+    <dimen name="font_answer">30sp</dimen>
+    <dimen name="desc_size">30sp</dimen>
+    <dimen name="title_size">40sp</dimen>
+    <dimen name="font_button">30sp</dimen>
 </resources>
