Fixed fonts and colors

--- a/app/src/main/res/layout/fragment_f_a_qs.xml
+++ b/app/src/main/res/layout/fragment_f_a_qs.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple_100"
-    tools:context=".ListView.FAQsFragment">
+    tools:context=".ListView.FAQsFragment"
+    android:baselineAligned="false">
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/faqList"/>
