--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,8 +17,9 @@
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
         android:text="@string/nav_header_title"
+        android:textAlignment="center"
         android:textColor="@color/purple_500"
-        android:textSize="35sp"
+        android:textSize="@dimen/shop_name_font"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,5 +38,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/shopName" />
+        app:layout_constraintTop_toBottomOf="@+id/shopName"
+        android:contentDescription="@string/shop_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
