--- a/app/src/main/res/layout/fragment_nav_credit.xml
+++ b/app/src/main/res/layout/fragment_nav_credit.xml
@@ -14,9 +14,10 @@
         android:id="@+id/author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="@string/author"
         android:textAlignment="center"
+        android:textColor="@color/text_color"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -24,18 +25,20 @@
         android:id="@+id/authorName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="@string/author_name"
         android:textAlignment="center"
+        android:textColor="@color/text_color"
         android:textSize="25sp" />
 
     <TextView
         android:id="@+id/specialThanks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="@string/special_thanks"
         android:textAlignment="center"
+        android:textColor="@color/text_color"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -43,18 +46,20 @@
         android:id="@+id/specialThanksName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="@string/special_thanks_name"
         android:textAlignment="center"
+        android:textColor="@color/text_color"
         android:textSize="25sp" />
 
     <TextView
         android:id="@+id/thanks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="@string/thanks"
         android:textAlignment="center"
+        android:textColor="@color/text_color"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -62,18 +67,20 @@
         android:id="@+id/thanksName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="@string/thanks_name"
         android:textAlignment="center"
+        android:textColor="@color/text_color"
         android:textSize="25sp" />
 
     <TextView
         android:id="@+id/references"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="@string/references"
         android:textAlignment="center"
+        android:textColor="@color/text_color"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -82,9 +89,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="10dp"
-        android:padding="10dp"
+        android:padding="15dp"
         android:text="@string/references_website"
         android:textAlignment="center"
+        android:textColor="@color/text_color"
         android:textSize="22sp" />
 
 </LinearLayout>
